solved it by creating an element overlapping all elements I don't want to be clickable

--- a/src/css/portalSection.css
+++ b/src/css/portalSection.css
@@ -21,6 +21,7 @@
   width: 10%;
   background-color: yellow;
   opacity: 0.4;
+  z-index: 3;
 }
 
 .eth-popup-btn {
@@ -30,6 +31,7 @@
   width: 6%;
   background-color: red;
   opacity: 0.4;
+  z-index: 3;
 }
 
 #coin-animation{
@@ -72,4 +74,14 @@
   width: 70%;
   top: 21%;
   right: -80px;
+  z-index: 1;
+}
+
+.remove-click-layer{
+  width: 100%;
+  height: 100%;
+  z-index: 2;
+  position: absolute;
+  left: 0;
+  top: 0;
 }
